--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -55,6 +55,11 @@
   height: 9.9vw;
   transform: translateX(38.8vw) translateY(22.5vw);
   background-color: #fee629;
+  transition: transform 0.2s ease;
+}
+
+.circle.header:hover {
+  transform: translateX(38.8vw) translateY(22.5vw) scale(1.1);
 }
 
 .circle-text.header {
