--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,12 @@
   padding: 0;
   box-sizing: border-box;
   transition: transform 0.3s ease;
+  scroll-behavior: smooth;
+}
+
+.wrapper {
+  position: relative;
+  overflow: hidden;
 }
 
 html {
@@ -12,6 +18,27 @@ html {
 
 ul {
   list-style-type: none;
+}
+
+button,
+a {
+  all: unset;
+  box-sizing: border-box;
+  display: inline-block;
+  cursor: pointer;
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  color: inherit;
+  font: inherit;
+  text-decoration: none;
+  outline: none;
+}
+
+button:focus {
+  outline: none;
 }
 
 @font-face {
