--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -199,3 +199,73 @@
 .md-size {
   height: 100%;
 }
+
+.rules {
+  &-close-button {
+    position: absolute;
+    transform: translateX(1px) translateY(1px);
+    right: 6.4844vw;
+  }
+
+  &-modal {
+    position: absolute;
+    width: 92.0313vw;
+    height: 52.3438vw;
+    background-color: white;
+    right: -100vw;
+    z-index: 10;
+    overflow: hidden;
+    padding-top: 5.2344vw;
+    padding-left: 10.0938vw;
+    top: -15px;
+    transition: right 0.3s ease;
+
+    mask-image: url(../assets/img/about_rules-mask.svg);
+    mask-repeat: no-repeat;
+    mask-size: cover;
+    -webkit-mask-image: url(../assets/img/about_rules-mask.svg);
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-size: cover;
+    object-fit: cover;
+  }
+
+  &-container {
+    display: flex;
+    flex-direction: column;
+    width: 99%;
+    height: 100%;
+    overflow: scroll;
+  }
+
+  &-title {
+    font-family: 'AlterBiomDemo';
+    font-weight: normal;
+    text-transform: uppercase;
+    font-size: 1.875rem;
+    margin-bottom: 2.0703vw;
+    line-height: 2.25rem;
+  }
+
+  &-subtitle {
+    font-size: 1.4375rem;
+    margin-bottom: 1.0156vw;
+    line-height: 1.9406rem;
+  }
+
+  &__text {
+    display: flex;
+    width: 59.6875vw;
+    flex-direction: column;
+    font-size: 1.0625rem;
+    line-height: 1.793vw;
+    gap: 1.5625vw;
+
+    & ul {
+      display: flex;
+      flex-direction: column;
+      gap: 1px;
+      list-style-type: disc;
+      padding-left: 1.3281vw;
+    }
+  }
+}
