--- a/src/styles/regions.scss
+++ b/src/styles/regions.scss
@@ -71,6 +71,11 @@
     opacity: 1;
     z-index: 10;
     width: 100%;
+
+    @media (min-width: 1281px) {
+      left: 18.7656vw;
+      top: 12.7969vw;
+    }
   }
 
   &__fly-1,
@@ -396,5 +401,5 @@
   background: url('/src/assets/img/region_point-bg.svg') no-repeat center;
   background-size: contain;
   display: inline-block;
-  padding: 8px 16px;
+  padding: 0.825vw 1.25vw;
 }
